--- a/css/style.css
+++ b/css/style.css
@@ -70,17 +70,6 @@ body {
     background-color: blue;
 }
 
-.buysell {
-	position: absolute;
-	margin:10px;
-	margin-top:32%;
-	right:0px;
-	background-color:black;
-	border:solid black 3px;
-	width:18%;
-	height:40%;
-}
-
 table{
 	border-collapse:separate; 
     border-spacing:0 55%;	
@@ -102,6 +91,174 @@ table{
 	padding-right:15px;
 }
 
+.buysell{
+	margin-top:8%;
+	width:18%;
+	height:80%;
+}
+
+/*.buysell{
+	background-color: #03A9F4;
+	overflow: hidden;
+	font-family: 'Ropa Sans', sans-serif;
+	text-align:center;
+    display: flex;
+	align-items: center;
+	justify-content: center;    
+}
+
+.buysell,
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}*/
+
+//slider
+
+.mn {
+  width: 400px;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+label {
+  display: block;
+  margin-bottom: 2.5em;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.rangeslider__tooltip {
+  display: block;
+  margin-top: 2.5em;
+  font-size: 12px;
+  color: #a59eb5;
+}
+
+.rangeslider,
+input[type='range'] {
+  max-width: 400px;
+}
+
+.rangeslider__handle {
+  border-radius: 22px;
+  line-height: 42px;
+  text-align: center;
+  font-weight: bold;
+  
+  &:after {
+    background: 0;
+  }
+}
+
+.rangeslider,
+.rangeslider__fill {
+  display: block;
+  border-radius: 10px;
+}
+
+.rangeslider {
+  background: #e6e5ea;
+    background-image:
+    linear-gradient(
+      to right, 
+      #4bc67d 30%, #f1c40f 45%, #b94a48 99%
+  );
+  position: relative;
+}
+
+.rangeslider--horizontal {
+  height: 10px;
+  width: 100%;
+}
+
+.rangeslider--vertical {
+  width: 20px;
+  min-height: 150px;
+  max-height: 100%;
+}
+
+.rangeslider--disabled {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
+  opacity: 0.4;
+}
+
+.rangeslider__fill {
+  // background: #4bc67d;
+  position: absolute;
+}
+.rangeslider--horizontal .rangeslider__fill {
+  top: 0;
+  height: 100%;
+}
+.rangeslider--vertical .rangeslider__fill {
+  bottom: 0;
+  width: 100%;
+}
+
+.rangeslider__handle {
+  background: white;
+  border: 6px solid #4bc67d;
+  cursor: pointer;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  
+  &.js-low {
+    border-color: #4bc67d;
+  }
+    
+  &.js-med {
+    border-color: #f1c40f;
+  }
+    
+  &.js-high {
+    border-color: #b94a48;
+  }
+}
+.rangeslider__handle:after {
+  content: "";
+  display: block;
+  width: 18px;
+  height: 18px;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
+.rangeslider__handle:active {
+  
+}
+.rangeslider--horizontal .rangeslider__handle {
+  top: -20px;
+  touch-action: pan-y;
+  -ms-touch-action: pan-y;
+}
+.rangeslider--vertical .rangeslider__handle {
+  left: -10px;
+  touch-action: pan-x;
+  -ms-touch-action: pan-x;
+}
+
+input[type="range"]:focus + .rangeslider .rangeslider__handle {
+  -moz-box-shadow: 0 0 8px rgba(255, 0, 255, 0.9);
+  -webkit-box-shadow: 0 0 8px rgba(255, 0, 255, 0.9);
+  box-shadow: 0 0 8px rgba(255, 0, 255, 0.9);
+}
 
 
 /*table{
