--- a/css/style.css
+++ b/css/style.css
@@ -277,3 +277,39 @@ th{
 	 font-weight:bolder;
  }
 
+.marquee {
+  margin: 0 auto;
+  white-space: nowrap;
+  overflow: hidden;
+  position: absolute;
+}
+
+.marquee span {
+  display: inline-block;
+  padding-left: 100%;
+  animation: marquee 15s linear infinite;
+}
+
+.marquee2 span {
+  animation-delay: 6.8s;
+}
+
+.marquee{
+	cursor:pointer;
+	position:relative;
+	top:40%;
+}
+.marquee2{
+	cursor:pointer;
+	position:relative;
+	top:3%;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+  }
+}
