--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,12 @@
 	flex-wrap:wrap;
 	position: absolute;
 	margin:10px;
-	margin-top:12%;
+	margin-top:16.5vh;
 	right:0px;
 	background-color:black;
 	border:solid black 3px;
-	width:18%;
-	height:33%;
+	width:24vh;
+	height:33vh;
 }
 
 #Transactions{
@@ -27,12 +27,12 @@
 	flex-wrap:wrap;
 	position: absolute;
 	margin:10px;
-	margin-top:37%;
+	margin-top:51vh;
 	right:0px;
 	background-color:black;
 	border:solid black 3px;
-	width:18%;
-	height:40%;
+	width:24vh;
+	height:40vh;
 }
 
 .form-control:focus {
@@ -92,9 +92,9 @@ table{
 }
 
 .buysell{
-	margin-top:12%;
-	width:18%;
-	height:300%;
+	margin-top:16.5vh;
+	width:24vh;
+	height:100vh;
 }
 
 
