--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
 @charset "utf-8";
 /* CSS Document */
 
+html {
+  height:100%;
+}
+
+* {
+  box-sizing:border-box;
+  margin:0;
+  padding:0;
+}
+
 .contain{
 	display:flex;
 	flex-direction:row;
@@ -12,13 +22,13 @@
 }
 
 #market{
-	display:flex;
-	flex-direction: row;
-	flex-wrap:wrap;
+	//display:flex;
+	//flex-direction: row;
+	//flex-wrap:wrap;
 	position: absolute;
 	margin:10px;
 	margin-top:16.5vh;
-	right:0px;
+	left:112vh;
 	background-color:black;
 	border:solid black 3px;
 	width:24vh;
@@ -26,13 +36,13 @@
 }
 
 #Transactions{
-	display:flex;
-	flex-direction: row;
-	flex-wrap:wrap;
+	//display:flex;
+	//flex-direction: row;
+	//flex-wrap:wrap;
 	position: absolute;
 	margin:10px;
 	margin-top:51vh;
-	right:0px;
+	left:112vh;
 	background-color:black;
 	border:solid black 3px;
 	width:24vh;
