--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ body {
   background: -webkit-linear-gradient(to right, #ffd89b, #19547b);
   background: linear-gradient(to right, #ffd89b, #19547b);
   min-height: 100vh;
+  min-width: 100vh;
 }
 
 .form-control::placeholder {
