--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 
 html {
   height:100%;
+  width:100%;
 }
 
 * {
@@ -67,6 +68,8 @@ body {
   //background-repeat: repeat-y;
   min-height: 100vh;
   min-width: 100vh;
+  width:100%;
+  height:100%;
 }
 
 .form-control::placeholder {
@@ -108,7 +111,7 @@ table{
 }
 
 .buysell{
-	margin-top:16.5vh;
+	top:16.5vh;
 	width:24vh;
 	height:100vh;
 }
