--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ html {
 	//flex-wrap:wrap;
 	position: absolute;
 	margin:10px;
-	margin-top:16.5vh;
+	margin-top:150px;
 	left:1000px;
 	background-color:black;
 	border:solid black 3px;
@@ -42,7 +42,7 @@ html {
 	//flex-wrap:wrap;
 	position: absolute;
 	margin:10px;
-	margin-top:51vh;
+	top:450px;
 	left:1000px;
 	background-color:black;
 	border:solid black 3px;
@@ -111,7 +111,7 @@ table{
 }
 
 .buysell{
-	top:16.5vh;
+	top:150px;
 	width:200px;
 	height:600px;
 }
